# DicomToMesh

./: .gitignore  CMakeLists.txt  example.txt
lib/src/: dicomRoutines.cpp
test/: CMakeLists.txt
